[metadata]
name = os-log-merger
summary = OpenStack Log merge tool
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/os-log-merger
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic:: Utilities
keywords = OpenStack log merger
license = Apache Software License

[files]
packages =
    oslogmerger

[entry_points]
console_scripts =
    os-log-merger=oslogmerger.oslogmerger:main
    oslogmerger=oslogmerger.oslogmerger:main
	netprobe=oslogmerger.probes.netprobe:main

[wheel]
universal = 1
